Bug 103624 - Notebookbar: CRASH when selecting vertical ruler
Summary: Notebookbar: CRASH when selecting vertical ruler
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha1+
Hardware: All All
: medium major
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-01 16:31 UTC by Xisco Faulí
Modified: 2016-11-01 23:00 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2016-11-01 16:31:19 UTC
Step to reproduce:
1. Select View - Toolbar Layout - Notebookbar
2. Select View - Notebookbar - Contextual Group
3. Select View - Notebookbar - Contextual Single
4. Select View - Notebookbar - Tabbed
5. Select Rulers - Vertical Ruler

Observed behavior: Libreoffice Crashes

Reproduced in

Version: 5.3.0.0.alpha1+
Build ID: 64d3bd38c9242c1cc114f6e68bf13475ef679b73
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; VCL: gtk2; Layout Engine: old; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 1 Commit Notification 2016-11-01 19:57:08 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2c1d6e598908dae527a7cfeed8e82b23fedd04da

tdf#103624 Avoid double init of controls in SidebarToolBox

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Xisco Faulí 2016-11-01 23:00:23 UTC
wow, that was fast. Thank you Maxim